--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -10,5 +10,17 @@
 }
 
 .App {
-    width: 800px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    width: 100vw;
+    justify-content: center;
+}
+
+.video__wrapper {
+    width: 80vw;
+    height: 85vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
